syntax = "proto3";
import "messenger.proto";
import "google/protobuf/empty.proto";
package controller;
option go_package="github.com/Pelmenner/TransferBot/proto/controller";

service Controller {
  rpc HandleNewMessage(HandleMessageRequest) returns (google.protobuf.Empty) {}
  rpc Subscribe(SubscribeRequest) returns (SubscribeResponse) {}
  rpc Unsubscribe(UnsubscribeRequest) returns (UnsubscribeResponse) {}
  rpc GetChatToken(GetChatTokenRequest) returns (GetChatTokenResponse) {}
  rpc CreateChat(CreateChatRequest) returns (CreateChatResponse) {}
}

message HandleMessageRequest {
  messenger.Message message = 1;
  messenger.Chat chat = 2;
}

message SubscribeRequest {
  messenger.Chat chat = 1;
  string token = 2;
}

message SubscribeResponse {
}

message UnsubscribeRequest {
  messenger.Chat chat = 1;
  string token = 2;
}

message UnsubscribeResponse {
}

message CreateChatRequest {
  int64 chatID = 1;
  string messenger = 2;
}

message CreateChatResponse {
  optional messenger.Chat chat = 1;
}

message GetChatTokenRequest {
  int64 chatID = 1;
  string messenger = 2;
}

message GetChatTokenResponse {
  string token = 1;
}
