syntax = "proto3";
import "google/protobuf/empty.proto";
package messenger;
option go_package="github.com/Pelmenner/TransferBot/proto/messenger";

service ChatService {
  rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty) {}
}

message SendMessageRequest {
    Message message = 1;
    Chat chat = 2;
}

message Attachment {
    string type = 1;
    string url = 2;
}

message Sender {
    string name = 1;
    Chat chat = 2;
}

message Chat {
    int64 id = 1;
    string type = 2;
    string name = 3;
}

message Message {
    string text = 1;
    Sender sender = 2;
    repeated Attachment attachments = 3;
}